--- a/vally_app/pubspec.yaml
+++ b/vally_app/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
+
+  
 
   # To add assets to your application, add an assets section, like this:
   # assets:
