--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   logger: ^2.6.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  http: ^1.5.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
