--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive_flutter: ^1.1.0
   http: ^1.5.0
   flutter_secure_storage: ^9.2.4
+  dio: ^5.9.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
